small tooltip changes, plus wrapping fixes for tooltip fields

--- a/src/UXClient/styles.scss
+++ b/src/UXClient/styles.scss
@@ -14,6 +14,14 @@ div[class^='tsi-']{
 	font-family: "Segoe UI", sans-serif; 
 }
 
+.tsi-textWrap{
+    overflow: hidden;
+    white-space: pre-wrap;
+    text-overflow: ellipsis;
+    hyphens: auto;
+    overflow-wrap: break-word;
+}
+
 .tsi-hidden{
     display: none;
 }
